--- a/frontend/src/app/layouts/sidebar-page-layout/sidebar-page-layout.component.html
+++ b/frontend/src/app/layouts/sidebar-page-layout/sidebar-page-layout.component.html
@@ -1,16 +1,16 @@
 <main>
   <div class="app-content">
 
-    <ng-content *ngIf="breadcrumb" select=".breadcrumb-placeholder"></ng-content>
+    <ng-content select=".breadcrumb-placeholder" *ngIf="breadcrumb"></ng-content>
 
     <div class="title-row">
       <h1 class="page-header">{{ title }}</h1> <ng-content select=".page-actions-placeholder"></ng-content>
     </div>
 
-    <div *ngIf="!customDescription" class="page-description">
+    <div class="page-description" *ngIf="!hideDescription && !customDescription">
       {{ description }}
     </div>
-    <div *ngIf="customDescription" class="page-description">
+    <div class="page-description" *ngIf="!hideDescription && customDescription">
       <ng-content select=".description-placeholder"></ng-content>
     </div>
 
@@ -19,14 +19,14 @@
       <ng-content select=".xs-filters-placeholder"></ng-content>
     </div>
 
-    <div class="app-actions">
+    <div class="app-actions" *ngIf="!hideDataActionsBar">
       <ng-content select=".data-actions-placeholder"></ng-content>
     </div>
 
     <ng-content select=".data-placeholder"></ng-content>
 
   </div>
-  <div *ngIf="!hideSidebar" class="app-sidebar except-xs">
+  <div class="app-sidebar except-xs" *ngIf="!hideSidebar">
 
     <ng-content select=".sidebar-placeholder"></ng-content>
 
