Frontend: Tabs Content - fill only 75% of space, instead of 100%. It makes forms and fields looks narrower and more readable. Long paragraphs, especially multiline, and full-width fields are hard to read.

--- a/frontend/src/styles/ui-kit.css
+++ b/frontend/src/styles/ui-kit.css
@@ -729,7 +729,7 @@ app-data-action-button:first-child {
   font-weight: 400;
 }
 .tabs-content {
-  flex: 1;
+  flex: .75; /* to make forms and fields narrower */
   padding-bottom: var(--px32);
 }
 .tabs-content .tab-content--hidden {
