--- a/frontend/src/app/view/settings/settings.component.html
+++ b/frontend/src/app/view/settings/settings.component.html
@@ -58,19 +58,26 @@
           [label]="'Name'"
           [description]="'Your name as other team members see it.'"
           [fieldSize]="'350'"
-          [value]="accountInfo.username"
-          (valueChanged)="changeAccountInfoHandler($event, 'username')"
+          [value]="(accountInfo$ | async).name"
+          (valueChanged)="changeAccountInfoPropHandler($event, 'name')"
         ></app-text-field>
 
         <app-text-field
           [label]="'Account email'"
           [description]="'This is your login. We also use this email address to request confirmations for important operations.'"
           [fieldSize]="'350'"
-          [value]="accountInfo.email"
-          (valueChanged)="changeAccountInfoHandler($event, 'email')"
+          [value]="(accountInfo$ | async).email"
+          (valueChanged)="changeAccountInfoPropHandler($event, 'email')"
         ></app-text-field>
 
-        <button class="input-box-button input-box-button--primary anim-bounce-on-click">Update Account Info</button>
+        <button class="input-box-button input-box-button--primary anim-bounce-on-click"
+                [ngClass]="{
+                  'input-box-button--in-progress': updatingAccountInfo
+                }"
+                (click)="updateAccountInfoHandler()"
+        >
+          Update Account Info
+        </button>
         <hr class="separation-line">
 
         <h3 class="tabs-content-title">Change password</h3>
@@ -79,26 +86,31 @@
           [label]="'You current password'"
           [isPasswordField]="true"
           [fieldSize]="'350'"
-          [value]="updatePassword.currentPassword"
-          (valueChanged)="updatePasswordHandler($event, 'currentPassword')"
+          (valueChanged)="updatePasswordPropHandler($event, 'currentPassword')"
         ></app-text-field>
         <app-text-field
           [label]="'New password'"
           [isPasswordField]="true"
           [fieldSize]="'350'"
-          [value]="updatePassword.newPassword"
-          (valueChanged)="updatePasswordHandler($event, 'newPassword')"
+          (valueChanged)="updatePasswordPropHandler($event, 'newPassword')"
         ></app-text-field>
         <app-text-field
           [label]="'Confirm new password'"
           [isPasswordField]="true"
           [fieldSize]="'350'"
-          [error]="updatePassword.confirmNewPasswordError"
-          [value]="updatePassword.confirmNewPassword"
-          (valueChanged)="updatePasswordHandler($event, 'confirmNewPassword')"
+          [error]="updatedPassword.confirmNewPasswordError"
+          (valueChanged)="updatePasswordPropHandler($event, 'confirmNewPassword')"
         ></app-text-field>
 
-        <button class="input-box-button input-box-button--primary anim-bounce-on-click">Update Password</button>
+        <button class="input-box-button input-box-button--primary anim-bounce-on-click"
+                [ngClass]="{
+                  'input-box-button--in-progress': updatingPassword,
+                  'input-box-button--disabled': updatingPasswordDisabled
+                }"
+                (click)="updatePasswordHandler()"
+        >
+          Update Password
+        </button>
         <hr class="separation-line">
 
         <h3 class="tabs-content-title">Delete Your Account</h3>
@@ -112,7 +124,6 @@
           [description]="'Enter your password to confirm operation'"
           [isPasswordField]="true"
           [fieldSize]="'350'"
-          [value]="accountInfo.password"
           (valueChanged)="changeAccountInfoHandler($event, 'password')"
         ></app-text-field>
 
