--- a/frontend/src/app/view/settings/settings.component.html
+++ b/frontend/src/app/view/settings/settings.component.html
@@ -141,18 +141,18 @@
 
         <p>Select screen sizes to use in all your test cases. You can override list of used viewports for particular scenario at its configuration page.</p>
 
-        <h4 class="tabs-content-subtitle">Popular Desktop Viewports</h4>
+        <h4 class="tabs-content-subtitle">Popular Viewports</h4>
         <app-viewports-selector
-          [viewports]="viewports.desktop"
-          [selected]="viewports.desktop_selected"
+          [viewports]="viewports$ | async"
+          [selected]="selectedViewports$ | async"
           (selectionChanged)="viewportsChangeHandler('desktop', $event)"
         >
         </app-viewports-selector>
-
+<!--
         <h4 class="tabs-content-subtitle">Popular Mobile Viewports</h4>
         <app-viewports-selector
-          [viewports]="viewports.mobile"
-          [selected]="viewports.mobile_selected"
+          [viewports]="viewports$ | async"
+          [selected]="selectedViewports$ | async"
           (selectionChanged)="viewportsChangeHandler('mobile', $event)"
         >
         </app-viewports-selector>
@@ -164,6 +164,8 @@
           (selectionChanged)="viewportsChangeHandler('tablet', $event)"
         >
         </app-viewports-selector>
+-->
+
 
         <!--
         <h4 *ngIf="viewports.custom.length > 0" class="tabs-content-subtitle">Custom Viewports</h4>
@@ -212,7 +214,11 @@
         -->
 
         <hr class="separation-line">
+        <p class="error-alert" *ngIf="(selectedViewports$ | async).length === 0">
+          You have to have at least one viewport to run tests.
+        </p>
         <button
+          *ngIf="(selectedViewports$ | async).length > 0"
           class="input-box-button input-box-button--primary anim-bounce-on-click"
           [ngClass]="{
           'input-box-button--in-progress': updatingViewportsList
