Frontend: Long Operation refactoring, in progress button animation.

--- a/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
+++ b/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
@@ -43,12 +43,16 @@
 <button class="button button--white">White</button>
 <button class="button button--accent1">Accent1</button>
 <button class="button button--accent2">Accent2</button>
-<pre>
-button.btn--dark
-button.btn--white
-button.btn--accent1
-button.btn--accent2
-</pre>
+
+<h1>Form buttons</h1>
+
+<div class="horizontal-fields-container">
+  <button class="input-box-button input-box-button--primary anim-bounce-on-click">input-box-button--primary</button>
+  <button class="input-box-button input-box-button--secondary anim-bounce-on-click">input-box-button--secondary</button>
+  <button class="input-box-button input-box-button--danger anim-bounce-on-click">input-box-button--danger</button>
+  <button class="input-box-button input-box-button--in-progress">input-box-button--in-progress</button>
+  <button class="input-box-button input-box-button--disabled">input-box-button--disabled</button>
+</div>
 
 
 <h1>Headers</h1>
@@ -105,7 +109,6 @@ button.btn--accent2
   </div>
 </div>
 
-
 <div class="text-field text-field--error text-field--350">
   <label for="input-err">Error state</label>
   <div class="input-box">
@@ -142,6 +145,14 @@ button.btn--accent2
     <i class="input-box-icon fas fa-times"></i>
   </div>
 </div>
+
+
+<h1>Alerts</h1>
+
+<p class="error-alert">
+  You have to have at least one viewport to run tests.
+</p>
+
 
 
 <h1>Checkboxes</h1>
