--- a/frontend/src/styles/ui-kit.css
+++ b/frontend/src/styles/ui-kit.css
@@ -643,17 +643,57 @@ app-data-action-button:first-child {
   filter: opacity(70%);
 }
 
-.input-box-button--disabled {
+.input-box-button--disabled,
+.input-box-button--disabled:hover {
   background: var(--color-disabled);
+  cursor: default;
+  filter: none;
 }
 .input-box-button--in-progress,
 .input-box-button--in-progress:hover,
 .input-box-button--in-progress:active {
-  background: var(--color-accent);
+  background: var(--color-blue-light);
+  background-size: 50px 50px;
+  background: radial-gradient(hsl(220, 60%, 80%), hsl(220, 60%, 55%));
   cursor: default;
-  opacity: 1;
+  filter: none;
   transform: scale(1);
+
+  position: relative;
+
 }
+.input-box-button--in-progress:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-size: 50px 50px;
+  animation: anim-in-progress 3s linear infinite;
+  background-image: -webkit-gradient(
+    linear, 0 0, 100% 100%,
+    color-stop(.25, rgba(255, 255, 255, .2)),
+    color-stop(.25, transparent),
+    color-stop(.5, transparent),
+    color-stop(.5, rgba(255, 255, 255, .2)),
+    color-stop(.75, rgba(255, 255, 255, .2)),
+    color-stop(.75, transparent),
+    to(transparent)
+  );
+  background-image: linear-gradient(
+    -45deg,
+    rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%,
+    rgba(255, 255, 255, .2) 50%,
+    rgba(255, 255, 255, .2) 75%, transparent 75%, transparent
+  );
+  z-index: 1;
+}
+@keyframes anim-in-progress {
+  0% { background-position: 0 0; }
+  100% { background-position: 50px 50px; }
+}
+
 
 .separation-line {
   border-style: solid;
