[Bug] Overview - card-sm - LatestResults does not work correctly *removed LatestResults button, because history available from scenario page*

--- a/frontend/src/app/ui-kit/card-sm/card-sm.component.html
+++ b/frontend/src/app/ui-kit/card-sm/card-sm.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="actions">
       <span (click)="clickRun.emit(itemId)">Run <app-icon icon="Run"></app-icon></span>
-      <span (click)="clickHistory.emit(itemId)">Latest results</span>
+      <!-- <span (click)="clickHistory.emit(itemId)">Latest results</span> -->
     </div>
   </div>
 </div>
