Click on job history row should navigate to job history record

--- a/frontend/src/app/components/history-table/history-table.component.html
+++ b/frontend/src/app/components/history-table/history-table.component.html
@@ -8,7 +8,9 @@
     [rowHeight]="68"
     [rowData]="jobs$ | async"
     [columnDefs]="columnDefs"
-    (gridReady)="onGridReady($event)">
+    (gridReady)="onGridReadyHandler($event)"
+    (rowClicked)="rowClickedHandler($event)"
+    >
   </ag-grid-angular>
 
 </div>
