Frontend: Implement Search filter

--- a/frontend/src/app/view/job-page/job-page.component.html
+++ b/frontend/src/app/view/job-page/job-page.component.html
@@ -41,7 +41,7 @@
     <div>
       <app-data-search-button
         [label]="'Search case'"
-        (changed)="search($event)">
+        (changed)="searchCaseHandler($event)">
       </app-data-search-button>
     </div>
     <div>
