--- a/frontend/src/app/view/jobs/jobs.component.html
+++ b/frontend/src/app/view/jobs/jobs.component.html
@@ -15,10 +15,10 @@
 
     <div>
 
-      <app-data-search-button
+      <!-- <app-data-search-button
         [label]="'Search job'"
         (changed)="searchHandler($event)">
-      </app-data-search-button>
+      </app-data-search-button> -->
 
     </div>
     <div>
