--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -22,7 +22,7 @@
     <div>
       <app-data-search-button
         [label]="'Search scenario'"
-        (changed)="search($event)">
+        (changed)="searchScenarioHandler($event)">
       </app-data-search-button>
     </div>
     <div>
