Backend: Run several scenarios by filter - JobPage view Page Action (Run Failed)

--- a/frontend/src/app/layouts/overview-layout/overview-layout.component.html
+++ b/frontend/src/app/layouts/overview-layout/overview-layout.component.html
@@ -27,7 +27,7 @@
           <div class="app-row-title">
 
             <div class="column-header">
-              <h2>Favorite Scenarios</h2>
+              <h2 [routerLink]="['/scenarios']">Favorite Scenarios</h2>
               <span>
                 <span class="action" [routerLink]="['/scenarios']">View All</span>
               </span>
@@ -42,7 +42,7 @@
           <div class="app-row-title">
 
             <div class="column-header">
-              <h2>Recent Runs</h2>
+              <h2 [routerLink]="['/jobs']">Recent Runs</h2>
               <span>
                 <span class="action" [routerLink]="['/jobs']">View All</span>
               </span>
