--- a/frontend/src/app/view/job-page/job-page.component.html
+++ b/frontend/src/app/view/job-page/job-page.component.html
@@ -25,14 +25,19 @@
   <div class="page-actions-placeholder">
 
     <ul class="page-actions">
-      <li class="title-actions-item">
-        <button class="button button--white" (click)="runFailedHandler()">Run Failed ({{(sidebarHeaderInfo$ | async).failedCases}})</button>
-      </li>
+
       <li class="title-actions-item"
-          *ngIf="(sidebarHeaderInfo$ | async).failedCases > 0"
-      >
-        <button class="button button--dark" (click)="approveAllFailedCasesHandler()">Approve Failed Cases ({{(sidebarHeaderInfo$ | async).failedCases}})</button>
+          *ngIf="(sidebarHeaderInfo$ | async).failedCases > 0">
+        <button class="button button--white" (click)="runFailedHandler()">
+          Run Failed ({{(sidebarHeaderInfo$ | async).failedCases}})</button>
       </li>
+
+      <li class="title-actions-item"
+          *ngIf="(sidebarHeaderInfo$ | async).failedCases > 0">
+        <button class="button button--dark" (click)="approveAllFailedCasesHandler()">
+          Approve Failed Cases ({{(sidebarHeaderInfo$ | async).failedCases}})</button>
+      </li>
+
     </ul>
 
   </div>
